# calendar-notification

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  codecov.yml  metadata.err
.claude/skills/idiomatic-rust/: SKILL.md
.claude/skills/idiomatic-rust/references/: error-handling.md  pragmatic-rust-guidelines.md  repo-conventions.md  rust-api-guidelines.md
.claude/skills/rust-testing/: SKILL.md
.claude/skills/rust-testing/references/: coverage.md  testing-patterns.md
.github/workflows/: ci.yml
assets/: calendar-notification.desktop
src/: app.rs  config.rs  engine.rs  icon.rs  lib.rs  main.rs  notify.rs  tray.rs
src/google/: auth.rs  client.rs  mod.rs  model.rs
src/ui/: add_event.rs  agenda.rs  detail.rs  mod.rs  recurrence.rs  setup.rs
systemd/: calendar-notification.service
tests/: integration.rs
